Support closing multiple tabs at once

--- a/tabs-overview.html
+++ b/tabs-overview.html
@@ -5,6 +5,9 @@
   <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
+  <header id="top">
+    <button id="close-selected">Close selected</button>
+  </header>
   <div id="tab-list"></div>
   <script src="tabs-overview.js"></script>
 </body>
