Add duplicate-removal dummy button

--- a/tabs-overview.html
+++ b/tabs-overview.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="UTF-8">
   <title>Tab Manager</title>
   <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
@@ -11,7 +12,10 @@
 
     <ul class="controls">
       <li>
-        <button id="close-selected-tabs"><i>X</i> Close selected</button>
+        <button id="close-selected-tabs"><i>⛔</i> Close selected</button>
+      </li>
+      <li>
+        <button id="close-duplicate-tabs" disabled><i>🔄</i> Close spare duplicates</button>
       </li>
     </ul>
   </header>
